force-app/main/default/objects/Krow__Sage_Live__c/Krow__Sage_Live__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Sage Live</label>
</CustomObject>