force-app/main/default/objects/Krow__Sage_Live__c/fields/Krow__Enable_Invoice_Posting_By_Batch_Process__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Invoice_Posting_By_Batch_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if checked then the invoice will post in sage by klient sage schedule job</description>
    <inlineHelpText>if checked then the invoice will post in sage by krow sage schedule job</inlineHelpText>
    <label>Enable Invoice Posting By Batch Process</label>
    <type>Checkbox</type>
</CustomField>