force-app/main/default/objects/Krow__Sage_Live__c/fields/Krow__Enable_Sage_Live_Integration__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Sage_Live_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Sage Live Integration</label>
    <type>Checkbox</type>
</CustomField>