force-app/main/default/objects/Krow__Sage_Live__c/fields/Krow__Sales_Invoice_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Krow__Sales_Invoice_Transaction_Type__c</fullName>
    <label>Sales Invoice Transaction Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>